--- a/01_Quantum_Womanium_2022/silver-master/silver/D04_Order_Finding_Algorithm.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/D04_Order_Finding_Algorithm.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load qpe.py"
+    "# %load qpe.py\n",
+    "import cirq\n",
+    "def qpe(t,control, target, circuit, CU):\n",
+    "    \n",
+    "    #Apply Hadamard to control qubits\n",
+    "    circuit.append(cirq.H.on_each(control))\n",
+    "    \n",
+    "    #Apply CU gates\n",
+    "    for i in range(t):\n",
+    "        #Obtain the power of CU gate \n",
+    "        CUi = CU**(2**i)\n",
+    "        #Apply CUi gate where t-i-1 is the control\n",
+    "        circuit.append(CUi(control[t-i-1],*target))\n",
+    "        \n",
+    "    #Apply inverse QFT\n",
+    "    iqft(t,control,circuit)\n"
    ]
   },
   {
@@ -530,14 +545,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load iqft.py"
+    "# %load iqft.py\n",
+    "import cirq\n",
+    "from cirq.circuits import InsertStrategy\n",
+    "from cirq import H, SWAP, CZPowGate\n",
+    "\n",
+    "def iqft(n,qubits,circuit):\n",
+    "    \n",
+    "    #Swap the qubits\n",
+    "    for i in range(n//2):\n",
+    "        circuit.append(SWAP(qubits[i],qubits[n-i-1]), strategy = InsertStrategy.NEW)\n",
+    "     \n",
+    "    #For each qubit\n",
+    "    for i in range(n-1,-1,-1):\n",
+    "        #Apply CR_k gates where j is the control and i is the target\n",
+    "        k=n-i #We start with k=n-i\n",
+    "        for j in range(n-1,i,-1):\n",
+    "            #Define and apply CR_k gate\n",
+    "            crk = CZPowGate(exponent = -2/2**(k))\n",
+    "            circuit.append(crk(qubits[j],qubits[i]),strategy = InsertStrategy.NEW)\n",
+    "            k=k-1 #Decrement at each step\n",
+    "            \n",
+    "        #Apply Hadamard to the qubit\n",
+    "        circuit.append(H(qubits[i]),strategy = InsertStrategy.NEW)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'samples' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcirq\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#Your code here\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Print a histogram of results\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m results\u001b[38;5;241m=\u001b[39m \u001b[43msamples\u001b[49m\u001b[38;5;241m.\u001b[39mhistogram(key\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mresult\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(results)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'samples' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib\n",
     "import cirq\n",
@@ -686,7 +735,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -700,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
