--- a/01_Quantum_Womanium_2022/silver-master/silver/C01_Complex_Number_Basics.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/C01_Complex_Number_Basics.ipynb
@@ -245,9 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3+2j)\n",
+      "(3+2j)\n",
+      "5j\n",
+      "5j\n"
+     ]
+    }
+   ],
    "source": [
     "z1 = 3+2j\n",
     "print(z1)\n",
@@ -268,9 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z1= (3+2j) z2= (4+5j)\n",
+      "z1+z2= (7+7j)\n",
+      "z1-z2= (-1-3j)\n",
+      "z1*z2= (2+23j)\n",
+      "z1/z2= (0.5365853658536587-0.17073170731707318j)\n"
+     ]
+    }
+   ],
    "source": [
     "z1 = 3+2j\n",
     "z2 = 4+5j\n",
@@ -290,9 +313,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "real part of 3+2j: 3.0\n",
+      "imaginary part of 3+2j: 2.0\n",
+      "conjugate of 3+2j: (3-2j)\n",
+      "absolute value of 3+2j: 3.605551275463989\n",
+      "(3+2j)^3: (-9+46j)\n"
+     ]
+    }
+   ],
    "source": [
     "z = 3+2j\n",
     "print('real part of 3+2j:',z.real)\n",
@@ -319,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -384,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
