--- a/01_Quantum_Womanium_2022/silver-master/silver/C01_Complex_Number_Basics_Solutions.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/C01_Complex_Number_Basics_Solutions.ipynb
@@ -190,9 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((3+4j)/(2-j))*(7+2j)+3j= (-1.6+19.200000000000003j)\n",
+      "(1-2j)**5= (41+38j)\n",
+      "(8-4j)/(abs(4+3j))= (1.6-0.8j)\n"
+     ]
+    }
+   ],
    "source": [
     "result1 = ((3+4j)/(2-1j))*(7+2j)+3j\n",
     "print('((3+4j)/(2-j))*(7+2j)+3j=', result1)\n",
@@ -226,9 +236,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 - 3i = 4.242640687119285 *e^(i* -0.7853981633974484 )\n",
+      "5*e^(i*(pi/3)) = (2.5000000000000004+4.330127018922193j)\n"
+     ]
+    }
+   ],
    "source": [
     "from math import pi, cos, sin, asin\n",
     "#3 - 3i\n",
@@ -251,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
