--- a/01_Quantum_Womanium_2022/silver-master/silver/C02_Quantum_States_With_Complex_Numbers_Solutions.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/C02_Quantum_States_With_Complex_Numbers_Solutions.ipynb
@@ -126,9 +126,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a= 0.5 , -0.5\n",
+      "b= 12.000000000000004 , -12.000000000000004\n"
+     ]
+    }
+   ],
    "source": [
     "a_square = 1 - (0.1)**2 - (-0.7)**2 - (0.4)**2 - (0.3)**2\n",
     "a = a_square**0.5\n",
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,9 +230,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0.7425685924939679-0.00977063937492063j), (-0.263807263122857-0.6155502806199996j)]\n",
+      "summation of entry squares is 0.9999999999999998\n",
+      "Is it valid? True\n",
+      "[(0.80026189275586-0.14550216231924729j), (-0.5508296144942932+0.18707420869617505j)]\n",
+      "summation of entry squares is 0.9999999999999998\n",
+      "Is it valid? True\n",
+      "[(-0.6311937230776101+0j), (-0.3816520186050666+0.6752304944551178j)]\n",
+      "summation of entry squares is 0.9999999999999998\n",
+      "Is it valid? True\n",
+      "[(-0.5466230436257277-0.7159991979886292j), (0.3464512248332077-0.26176314765175696j)]\n",
+      "summation of entry squares is 0.9999999999999998\n",
+      "Is it valid? True\n",
+      "[(0.5485632863361227+0.6080460523243769j), (0.5551724825570398-0.1454023168601771j)]\n",
+      "summation of entry squares is 0.9999999999999998\n",
+      "Is it valid? True\n",
+      "[(0.280676692133964-0.756267753805403j), (-0.506777360797435-0.304066416478461j)]\n",
+      "summation of entry squares is 1.0000000000000002\n",
+      "Is it valid? True\n",
+      "[(-0.5160754673151046-0.6108648388627769j), (-0.4739468577383613-0.36862533379650325j)]\n",
+      "summation of entry squares is 0.9999999999999998\n",
+      "Is it valid? True\n",
+      "[(0.6233601958598043-0.34090010711083046j), (0.05844001836185665+0.7012802203422798j)]\n",
+      "summation of entry squares is 0.9999999999999998\n",
+      "Is it valid? True\n",
+      "[(-0.5003496432010351+0.17319795341574293j), (-0.5901559894166055+0.6094002064627991j)]\n",
+      "summation of entry squares is 1.0\n",
+      "Is it valid? True\n",
+      "[(-0.8373021868731394-0.3033703575627317j), (-0.0728088858150556+0.44898812919284287j)]\n",
+      "summation of entry squares is 1.0\n",
+      "Is it valid? True\n"
+     ]
+    }
+   ],
    "source": [
     "#Use the functions you have written to randomly generate and check quantum states\n",
     "for i in range(10):\n",
@@ -235,7 +281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
