--- a/01_Quantum_Womanium_2022/silver-master/silver/C03_Quantum_Operators_With_Complex_Numbers.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/C03_Quantum_Operators_With_Complex_Numbers.ipynb
@@ -186,8 +186,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load random_complex_quantum_state.py\n",
-    "#Run this cell to load the function you have written"
+    "# %load random_complex_quantum_state.py\n",
+    "from random import randrange\n",
+    "def random_complex_quantum_state():\n",
+    "    # quantum state    \n",
+    "    quantum_state=[0,0]\n",
+    "    length_square = 0\n",
+    "    while length_square == 0:\n",
+    "        first_entry_real = randrange(-100,101)\n",
+    "        first_entry_imag = randrange(-100,101)\n",
+    "        second_entry_real = randrange(-100,101)\n",
+    "        second_entry_imag = randrange(-100,101)\n",
+    "        length_square = first_entry_real**2+first_entry_imag**2+second_entry_real**2+second_entry_imag**2\n",
+    "    first_entry_real = first_entry_real / length_square**0.5\n",
+    "    first_entry_imag = first_entry_imag / length_square**0.5\n",
+    "    second_entry_real = second_entry_real / length_square**0.5\n",
+    "    second_entry_imag = second_entry_imag / length_square**0.5\n",
+    "    quantum_state[0] = complex(first_entry_real, first_entry_imag)\n",
+    "    quantum_state[1] = complex(second_entry_real, second_entry_imag)\n",
+    "    return quantum_state\n"
    ]
   },
   {
@@ -196,13 +213,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load is_quantum_state.py\n",
-    "#Run this cell to load the function you have written"
+    "# %load is_quantum_state.py\n",
+    "# testing whether a given quantum state is valid\n",
+    "def is_quantum_state(quantum_state):\n",
+    "    length_square = 0\n",
+    "    for i in range(len(quantum_state)):\n",
+    "        length_square += abs(quantum_state[i])**2\n",
+    "    print(\"summation of entry squares is\",length_square)\n",
+    "    # there might be precision problem\n",
+    "    # the length may be very close to 1 but not exactly 1\n",
+    "    # so we use the following trick\n",
+    "    if (length_square - 1)**2 < 0.00000001: return True \n",
+    "    return False\n",
+    "for i in range(10):\n",
+    "    new_state = random_complex_quantum_state()\n",
+    "    print(new_state)\n",
+    "    print(\"Is it valid?\",is_quantum_state(new_state))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
