--- a/01_Quantum_Womanium_2022/silver-master/silver/C05_Global_And_Local_Phase_Solutions.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/C05_Global_And_Local_Phase_Solutions.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2500000000000001, 0.7499999999999999]\n",
+      "[0.5000000000000001, 0.5000000000000001]\n",
+      "[0.7500000000000001, 0.24999999999999994]\n"
+     ]
+    }
+   ],
    "source": [
     "from math import pi\n",
     "print(calculate_probabilities(2*pi/3,pi))\n",
@@ -138,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
