--- a/01_Quantum_Womanium_2022/silver-master/silver/D00_Cirq_Introduction_Solutions.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/D00_Cirq_Introduction_Solutions.ipynb
@@ -81,10 +81,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "frank-landscape",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: ───H───@───@───@───@───@───@───@───@───@───\n",
+      "          │   │   │   │   │   │   │   │   │\n",
+      "1: ───────X───┼───┼───┼───┼───┼───┼───┼───┼───\n",
+      "              │   │   │   │   │   │   │   │\n",
+      "2: ───────────X───┼───┼───┼───┼───┼───┼───┼───\n",
+      "                  │   │   │   │   │   │   │\n",
+      "3: ───────────────X───┼───┼───┼───┼───┼───┼───\n",
+      "                      │   │   │   │   │   │\n",
+      "4: ───────────────────X───┼───┼───┼───┼───┼───\n",
+      "                          │   │   │   │   │\n",
+      "5: ───────────────────────X───┼───┼───┼───┼───\n",
+      "                              │   │   │   │\n",
+      "6: ───────────────────────────X───┼───┼───┼───\n",
+      "                                  │   │   │\n",
+      "7: ───────────────────────────────X───┼───┼───\n",
+      "                                      │   │\n",
+      "8: ───────────────────────────────────X───┼───\n",
+      "                                          │\n",
+      "9: ───────────────────────────────────────X───\n"
+     ]
+    }
+   ],
    "source": [
     "import cirq\n",
     "from cirq import H, CX\n",
@@ -134,10 +160,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "internal-disclaimer",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: ───H───X───H───\n",
+      "          │\n",
+      "1: ───H───@───H───\n",
+      "          │\n",
+      "2: ───H───@───H───\n",
+      "          │\n",
+      "3: ───H───@───H───\n",
+      "          │\n",
+      "4: ───H───@───H───\n",
+      "          │\n",
+      "5: ───H───@───H───\n",
+      "          │\n",
+      "6: ───H───@───H───\n",
+      "          │\n",
+      "7: ───H───@───H───\n",
+      "          │\n",
+      "8: ───H───@───H───\n",
+      "          │\n",
+      "9: ───H───@───H───\n"
+     ]
+    }
+   ],
    "source": [
     "import cirq\n",
     "from cirq import H, X\n",
@@ -183,10 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "assured-atlantic",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'0000000000': 520, '1111111111': 480})\n"
+     ]
+    }
+   ],
    "source": [
     "import cirq\n",
     "from cirq import H, CX, measure\n",
@@ -241,10 +301,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "auburn-health",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "measurements: (no measurements)\n",
+      "\n",
+      "qubits: (cirq.LineQubit(0), cirq.LineQubit(1))\n",
+      "output vector: 0.5|00⟩ + 0.5|01⟩ + 0.5|10⟩ - 0.5|11⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(2),)\n",
+      "output vector: 0.707|0⟩ + 0.707|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(3),)\n",
+      "output vector: 0.707|0⟩ + 0.707|1⟩\n",
+      "\n",
+      "phase:\n",
+      "output vector: |⟩\n"
+     ]
+    }
+   ],
    "source": [
     "import cirq\n",
     "from cirq import H, CZ\n",
@@ -277,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -291,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
