--- a/01_Quantum_Womanium_2022/silver-master/silver/D03_Phase_Estimation.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/D03_Phase_Estimation.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,14 +386,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load iqft.py"
+    "# %load iqft.py\n",
+    "import cirq\n",
+    "from cirq.circuits import InsertStrategy\n",
+    "from cirq import H, SWAP, CZPowGate\n",
+    "\n",
+    "def iqft(n,qubits,circuit):\n",
+    "    \n",
+    "    #Swap the qubits\n",
+    "    for i in range(n//2):\n",
+    "        circuit.append(SWAP(qubits[i],qubits[n-i-1]), strategy = InsertStrategy.NEW)\n",
+    "     \n",
+    "    #For each qubit\n",
+    "    for i in range(n-1,-1,-1):\n",
+    "        #Apply CR_k gates where j is the control and i is the target\n",
+    "        k=n-i #We start with k=n-i\n",
+    "        for j in range(n-1,i,-1):\n",
+    "            #Define and apply CR_k gate\n",
+    "            crk = CZPowGate(exponent = -2/2**(k))\n",
+    "            circuit.append(crk(qubits[j],qubits[i]),strategy = InsertStrategy.NEW)\n",
+    "            k=k-1 #Decrement at each step\n",
+    "            \n",
+    "        #Apply Hadamard to the qubit\n",
+    "        circuit.append(H(qubits[i]),strategy = InsertStrategy.NEW)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (532334458.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [3]\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "#%%writefile qpe.py\n",
     "import cirq\n",
@@ -573,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
