--- a/01_Quantum_Womanium_2022/silver-master/silver/D03_Phase_Estimation_Solutions.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/D03_Phase_Estimation_Solutions.ipynb
@@ -310,7 +310,7 @@
      "output_type": "stream",
      "text": [
       "Sample the circuit:\n",
-      "Counter({2: 410, 3: 403, 1: 55, 4: 53, 0: 28, 6: 19, 5: 19, 7: 13})\n",
+      "Counter({3: 415, 2: 402, 1: 54, 4: 42, 5: 26, 0: 26, 6: 19, 7: 16})\n",
       "0: ───H───────────────────────@───────×────────────────────@─────────@────────H───M('result')───\n",
       "                              │       │                    │         │            │\n",
       "1: ───H─────────────@─────────┼───────┼───────@────────H───┼─────────@^-0.5───────M─────────────\n",
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -477,12 +477,12 @@
       "t: 1 estimation: 0.5\n",
       "t: 2 estimation: 0.25\n",
       "t: 3 estimation: 0.25\n",
-      "t: 4 estimation: 0.3125\n",
-      "t: 5 estimation: 0.3125\n",
+      "t: 4 estimation: 0.4375\n",
+      "t: 5 estimation: 0.34375\n",
       "t: 6 estimation: 0.328125\n",
       "t: 7 estimation: 0.328125\n",
       "t: 8 estimation: 0.328125\n",
-      "t: 9 estimation: 0.333984375\n"
+      "t: 9 estimation: 0.330078125\n"
      ]
     }
    ],
@@ -522,7 +522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
