--- a/01_Quantum_Womanium_2022/silver-master/silver/D05_Shors_Algorithm_Solutions.ipynb
+++ b/01_Quantum_Womanium_2022/silver-master/silver/D05_Shors_Algorithm_Solutions.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -231,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67 is picked with order 18\n",
+      "58 is picked with order 18\n",
       "Factors of 111 : 3 and 37\n"
      ]
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10  is picked after  2  trials\n"
+      "4  is picked after  1  trials\n"
      ]
     }
    ],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -441,8 +441,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "measurements: result=00101010101010\n",
-      "output vector: (-0.204+0.354j)|0010101010101000001⟩ + (-0.204-0.354j)|0010101010101000100⟩ + (0.204+0.353j)|0010101010101001010⟩ + (0.204-0.353j)|0010101010101001101⟩ + 0.408|0010101010101010000⟩ - 0.408|0010101010101010011⟩\n"
+      "measurements: result=10101010101010\n",
+      "\n",
+      "qubits: (cirq.LineQubit(1),)\n",
+      "output vector: (-0.5-0.866j)|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(2),)\n",
+      "output vector: (-0.5-0.866j)|0⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(3),)\n",
+      "output vector: (-0.5-0.866j)|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(4),)\n",
+      "output vector: (-0.5-0.866j)|0⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(5),)\n",
+      "output vector: (-0.5-0.866j)|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(6),)\n",
+      "output vector: (-0.5-0.866j)|0⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(7),)\n",
+      "output vector: (-0.5-0.866j)|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(8),)\n",
+      "output vector: (-0.5-0.866j)|0⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(9),)\n",
+      "output vector: (-0.5-0.866j)|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(10),)\n",
+      "output vector: (-0.5-0.866j)|0⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(11),)\n",
+      "output vector: (-0.5-0.866j)|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(12),)\n",
+      "output vector: (-0.5-0.866j)|0⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(13),)\n",
+      "output vector: (-0.5-0.866j)|1⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(14),)\n",
+      "output vector: (-0.5-0.866j)|0⟩\n",
+      "\n",
+      "qubits: (cirq.LineQubit(15), cirq.LineQubit(16), cirq.LineQubit(17), cirq.LineQubit(18), cirq.LineQubit(19))\n",
+      "output vector: (-0.289+0.5j)|00001⟩ + (-0.289-0.5j)|00100⟩ + 0.577|10000⟩\n",
+      "\n",
+      "phase:\n",
+      "output vector: |⟩\n"
      ]
     }
    ],
@@ -455,14 +502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2730\n"
+      "10922\n"
      ]
     }
    ],
@@ -474,15 +521,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 6, 682, 2]\n",
-      "[Fraction(0, 1), Fraction(1, 6), Fraction(682, 4093), Fraction(1365, 8192)]\n"
+      "[0, 1, 1, 1, 2730]\n",
+      "[Fraction(0, 1), Fraction(1, 1), Fraction(1, 2), Fraction(2, 3), Fraction(5461, 8192)]\n"
      ]
     }
    ],
@@ -506,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -542,14 +589,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Factors of 21 : 3 and 7\n"
+      "Factors of 21 : 21 and 1\n"
      ]
     }
    ],
@@ -569,7 +616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -583,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
